policies/restrict-hostpath.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: restrict-hostpath
spec:
  validationFailureAction: Audit
  background: true
  rules:
    - name: disallow-hostpath-volumes
      match:
        resources:
          kinds:
            - Pod
      validate:
        message: "hostPath volumes are not allowed."
        pattern:
          spec:
            =(volumes):
              - name: "*"
                X(hostPath): "*"
